# bk-user

./: .aidev_cr.json  .dockerignore  .gitignore  .pre-commit-config.yaml  License.txt  Makefile  pyproject.toml  readme.md  readme_en.md
src/api/: .coveragerc  Dockerfile  bkpkg-usermgr.yaml  manage.py  pyproject.toml  test_env.sh  wsgi.py
src/api/bkuser_core/: celery.py  urls.py
src/api/bkuser_core/apis/: serializers.py  swagger.py  urls.py
src/api/bkuser_core/audit/: apps.py  constants.py  handlers.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
src/api/bkuser_core/bkiam/: auth.py  base.py  constants.py  converters.py  exceptions.py  filters.py  helper.py  loader.py  permissions.py  serializers.py  urls.py  utils.py  views.py
src/api/bkuser_core/categories/: apps.py  cache.py  constants.py  exceptions.py  handlers.py  loader.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
src/api/bkuser_core/common/: async_utils.py  cache.py  db_sync.py  encrypt.py  error_codes.py  exception_handler.py  fields.py  http.py  kits.py  middlewares.py  models.py  notifier.py  progress.py  safe_template.py  serializers.py  utils.py  viewset.py
src/api/bkuser_core/config/: __init__.py
src/api/bkuser_core/departments/: cache.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
src/api/bkuser_core/enhanced_account/: authentication.py  middlewares.py
src/api/bkuser_core/esb_sdk/: README.md  base.py  client.py  collections.py  conf.py  exceptions.py  shortcuts.py  utils.py
src/api/bkuser_core/global_settings/: apps.py  constants.py  models.py  signals.py  urls.py
src/api/bkuser_core/monitoring/: apps.py  base.py  exceptions.py  probes.py  sentry.py  serializers.py  urls.py  views.py
src/api/bkuser_core/profiles/: account_expiration_notifier.py  apps.py  cache.py  captcha.py  constants.py  exceptions.py  filters.py  handlers.py  managers.py  models.py  notice_tools.py  notifier.py  password.py  password_expiration_notifier.py  serializers.py  signals.py  tasks.py  translation.py  urls.py  utils.py  validators.py  views.py
src/api/bkuser_core/recycle_bin/: apps.py  constants.py  handlers.py  models.py  signals.py  tasks.py
src/api/bkuser_core/tests/: conftest.py  utils.py
src/api/bkuser_core/user_settings/: apps.py  constants.py  exceptions.py  loader.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
src/api/media/excel/: export_org_tmpl.xlsx
src/api/resources/apigateway/: bk_apigw_resources_bk-user.yaml  definition.yaml
src/bk-login/: Dockerfile  Makefile  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
src/bk-login/bklogin/: idp_plugins  settings.py  urls.py  wsgi.py
src/bk-login/bklogin/authentication/: api_views.py  apps.py  constants.py  helper.py  manager.py  models.py  urls.py  utils.py  views.py
src/bk-login/bklogin/bkuser/: apps.py  constants.py  data_models.py  models.py
src/bk-login/bklogin/common/: context_processors.py  error_codes.py  middlewares.py  models.py  request.py  response.py
src/bk-login/bklogin/component/: bk_user.py  http.py
src/bk-login/bklogin/monitoring/: urls.py
src/bk-login/bklogin/open_apis/: mixins.py  urls.py  views.py
src/bk-login/bklogin/utils/: __init__.py  std_error.py  url.py
src/bk-login/pages/: .bk.development.env  .bk.production.env  .gitignore  bk.config.js  index.html  package.json  tsconfig.json
src/bk-login/pages/mock-server/: index.js
src/bk-login/pages/paas-server/: index.js
src/bk-login/pages/src/: app.vue  main.ts
src/bk-login/pages/types/: global.d.ts
src/bk-login/support-files/: definition.yaml  resources.yaml
src/bk-login/tests/authentication/: test_utils.py
src/bk-login/tests/open_apis/: conftest.py  test_bk_token.py
src/bk-login/tests/utils/: test_std_error.py  test_url.py
src/bk-user/: Dockerfile  Makefile  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
src/bk-user/bkuser/: celery.py  settings.py  urls.py  wsgi.py
src/bk-user/bkuser/apis/: constants.py
src/bk-user/bkuser/auth/: __init__.py  apps.py  backends.py  middlewares.py  models.py
src/bk-user/bkuser/biz/: auditor.py  data_source.py  data_source_handler.py  data_source_organization.py  data_source_plugin.py  exporters.py  idp.py  natural_user.py  organization.py  senders.py  tenant.py  tenant_admin.py  tenant_handler.py  tenant_setting.py  utils.py  validators.py  virtual_user.py  weixin.py
src/bk-user/bkuser/common/: cache.py  constants.py  desensitize.py  enum.py  error_codes.py  local.py  locks.py  log.py  middlewares.py  models.py  pagination.py  renderers.py  response.py  serializers.py  storage.py  swagger.py  task.py  time.py  validators.py  views.py
src/bk-user/support-files/: definition.yaml  resources.yaml
src/bk-user/tests/: conftest.py
src/bk-user/version_log/: changelog.md  changelog_en.md
src/idp-plugins/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/idp-plugins/idp_plugins/: __init__.py  base.py  constants.py  exceptions.py  http.py  models.py  tools.py  utils.py
src/login/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  RELEASE.md  bkuser_global  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  settings.py  start.sh  urls.py  wsgi.py
src/login/api/: views.py
src/login/backends/: bk.py
src/login/bk_i18n/: middlewares.py  signal_receivers.py
src/login/bkaccount/: admin.py  models.py
src/login/bkauth/: actions.py  decorators.py  middlewares.py  models.py  utils.py  views.py
src/login/bklogin/: particles.json  urls.py
src/login/common/: context_processors.py  encryption.py  exceptions.py  http.py  license.py  usermgr.py
src/login/components/: http.py  usermgr_api.py
src/login/conf/: default.py  settings_env.py
src/login/healthz/: urls.py  views.py
src/login/metadata/: urls.py  views.py
src/saas/: .gitignore  Dockerfile  README.md  RELEASE.yaml  bkpkg-bk_user_manage.yaml  manage.py  pyproject.toml  wsgi.py
src/saas/bkuser_shell/: urls.py
(+2180 files in other folders)
