[tool.poetry]
name = "蓝鲸用户管理"
version = "2.3.3"
description = "project description file for ci"
authors = ["TencentBlueKing <contactus_bk@tencent.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apigw-manager = "^1.0.3"

[tool.poetry.dev-dependencies]
# black
black = "^22.3.0"
# isort
isort = "^5.9.2"
# flake8
pyproject-flake8 = "0.0.1-alpha.2"
flake8-comprehensions = "3.5.0"
# pytest
pytest = "^6.2.4"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
# mypy
mypy = "^v0.910"
types-requests = "^2.25.0"
types-dataclasses = "^0.1.5"
types-pytz = "^2021.1.0"
types-pyyaml = "^5.4.3"
types-pymysql = "^1.0.0"
types-redis = "^3.5.4"
types-toml = "^0.1.3"
types-cachetools = "^4.2.4"

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
  | .+/migrations
  | .+/sdk
  | .+/node_modules
  | .+/build
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
skip_glob = ["*/migrations/**", "*/sdk/**", "*/node_modules/**"]
known_local_folder =["bkuser_core", "bkuser_shell", "bkuser_global", "bkuser_sdk", "bklogin"]

[tool.flake8]
ignore = "C901,E203,W503"
max-line-length = 119
max-complexity = 8
format = "pylint"
show_source = "true"
statistics = "true"
count = "true"
exclude = "*migrations*,*.pyc,.git,__pycache__,*/node_modules/*,*/templates_module*,*/bin/*,*/config/*,*sdk*,*build*"

[tool.mypy]
ignore_missing_imports = true
follow_imports="skip"
show_error_codes = true
strict_optional=true
pretty=true
exclude = '''(?x)(
    instrumentor\.py$
    | otel\.py$
    | src/build/.*\.py$
)'''

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "*.config.*",
    "bkuser_sdk.*",
    "*.bkuser_sdk.*",
    "*.build.*",
]
ignore_errors = true
