[tool.poetry]
name = "bk-user-api"
version = "2.3.3"
description = "bk-user Api"
authors = ["TencentBlueKing <contactus_bk@tencent.com>"]

[tool.poetry.dependencies]
python = "3.11.10"
aenum = "3.1.13"
Django = "4.2.17"
django-celery-beat = "2.7.0"
celery = "5.4.0"
drf-yasg = "1.21.7"
django-mptt = "0.16.0"
jsonfield = "3.1.0"
gunicorn = "23.0.0"
ldap3 = "^2.9.1"
PyMySQL = "1.1.1"
phonenumbers = "8.11.0"
whitenoise = "6.8.2"
redis = "5.2.0"
openpyxl = "^3.1.3"
django-redis = "^5.4.0"
python-json-logger = "2.0.7"
djangorestframework = "3.15.2"
djangorestframework-jsonp = "^1.0.2"
# force to 0.15.2, due to pypa bug: https://github.com/pypa/pip/issues/6264
django-modeltranslation = "0.18.11"
# vine 5.0.0 may broke celery 4.3.0, fixed manually
vine = "5.1.0"
curlify = "^2.2.1"
bk-iam = "1.3.6"
regex = "2024.11.6"
gevent = "24.11.1"
cryptography = "^44.0.0"
pydantic = "^2.6.4"
django-environ = "^0.11.2"
django-prometheus = "^2.3.1"
pyyaml = "^6.0.0"
sentry-sdk = "2.19.2"
pyjwt = "^2.10.1"
apigw-manager = "2.0.0"
django-celery-results = "2.5.1"
werkzeug = "2.3.8"
packaging = "24.2"
pyparsing = "3.2.0"
opentelemetry-api = "1.25.0"
opentelemetry-sdk = "1.25.0"
opentelemetry-exporter-otlp = "1.25.0"
opentelemetry-instrumentation-django = "0.46b0"
opentelemetry-instrumentation-dbapi = "0.46b0"
opentelemetry-instrumentation-redis = "0.46b0"
opentelemetry-instrumentation-requests = "0.46b0"
opentelemetry-instrumentation-celery = "0.46b0"
opentelemetry-instrumentation-logging = "0.46b0"
opentelemetry-exporter-jaeger = "1.21.0"
rsa = "^4.9"
concurrent-log-handler = "^0.9.25"
blueapps = "4.15.3"

[tool.poetry.dev-dependencies]
ipython = "^8.30"
# black
black = "^24.8"
# isort
isort = "^5.13.2"
# flake8
pyproject-flake8 = "^7.0.0"
flake8-comprehensions = "3.16.0"
# pytest
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
# mypy
mypy = "1.10.1"
types-requests = "^2.31.0.1"
types-dataclasses = "^0.6.6"
types-pytz = "^2024.2.0.20241003"
types-pyyaml = "^6.0.12.20240917"
types-pymysql = "^1.1.0.20240524"
types-redis = "^4.6.0.20241004"
types-toml = "^0.10.8.20240310"
types-cachetools = "^5.5.0.20240820"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bkuser_core.config.overlays.dev"
addopts = "--disable-pytest-warnings --reuse-db"


[[tool.poetry.source]]
name = "default"
url = "https://mirrors.tencent.com/pypi/simple/"