[tool.poetry]
name = "bk-login"
version = "0.1.0"
description = ""
authors = ["TencentBlueKing <contactus_bk@tencent.com>"]
readme = "README.md"
packages = [{include = "bk_login"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
