[tool.poetry]
name = "bk-user"
version = "0.1.0"
description = ""
authors = ["TencentBlueKing <contactus_bk@tencent.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.tencent.com/pypi/simple/"
priority = "default"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "4.2.17"
djangorestframework = "3.15.2"
celery = "5.4.0"
django-celery-beat = "2.7.0"
django-celery-results = "2.5.1"
pymysql = "1.1.1"
requests = "2.32.3"
gunicorn = "23.0.0"
gevent = "24.11.1"
django-environ = "0.11.2"
django-cors-headers = "4.6.0"
django-prometheus = "2.3.1"
whitenoise = "6.8.2"
werkzeug = "3.0.6"
python-json-logger = "2.0.7"
concurrent-log-handler = "0.9.25"
drf-yasg = "^1.21.7"
blue-krill = "2.0.7"
django-mptt = "0.16.0"
redis = "5.2.0"
django-redis = "5.4.0"
pydantic = "2.6.4"
zxcvbn = "4.4.28"
phonenumbers = "8.13.18"
jsonref = "1.1.0"
openpyxl = "3.1.3"
tongsuopy-crayon = "1.0.2b6"
sentry-sdk = "1.45.0"
bk-notice-sdk = "1.3.2"
opentelemetry-api = "1.25.0"
opentelemetry-sdk = "1.25.0"
opentelemetry-proto = "1.25.0"
opentelemetry-exporter-otlp = "1.25.0"
opentelemetry-instrumentation-django = "0.46b0"
opentelemetry-instrumentation-dbapi = "0.46b0"
opentelemetry-instrumentation-redis = "0.46b0"
opentelemetry-instrumentation-requests = "0.46b0"
opentelemetry-instrumentation-celery = "0.46b0"
opentelemetry-instrumentation-logging = "0.46b0"
django-modeltranslation = "0.18.11"
ldap3 = "2.9.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
mypy = "^1.10.1"
types-requests = "^2.31.0.1"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
types-pytz = "^2024.2.0.20241003"
import-linter = "^2.1"
types-redis = "^4.6.0.20241004"
types-pymysql = "^1.1.0.20240524"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
strict_optional=true
pretty=true
check_untyped_defs = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "bkuser.utils.tree"
]
ignore_errors = true

[tool.ruff]
# Same as Black.
line-length = 119
# show an enumeration of all autofixed lint violations
# show-fixes = true
# show source code snippets when reporting lint violations
# show-source = true
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
]
force-exclude = true

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "I", "C90", "PL", "RET", "N", "C4", "PT", "PERF", "G", "TRY", "SIM", "B", "PIE"]
# All Rule: https://beta.ruff.rs/docs/rules/
# Add `noqa: E501` manually when necessary until this issue is fixed: https://github.com/astral-sh/ruff/issues/3825
ignore = [
    # Consider moving this statement to an else block
    "TRY300",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM105",
    # Use ternary operator {contents} instead of if-else-block
    "SIM108",
    # Avoid too many arguments
    "PLR0913",
    # Avoid too many return statements
    "PLR0911",
    # Exception should be named with `Error` suffix
    "N818",
    # raise-without-from-inside-except
    "B904"
]
[tool.ruff.lint.per-file-ignores]
"**/tests/**.py" = ["PLR2004"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"

[tool.importlinter]
root_package = "bkuser"

# 分层
[[tool.importlinter.contracts]]
name = "Layers contract"
type = "layers"
layers = [
    "bkuser.apis | bkuser.auth | bkuser.monitoring",
    "bkuser.biz",
    "bkuser.apps",
    "bkuser.plugins",
    "bkuser.component",
    "bkuser.common",
    "bkuser.utils",
]

# apps 分层
[[tool.importlinter.contracts]]
name = "Apps Layers contract"
type = "layers"
layers = [
    "bkuser.apps.sync | bkuser.apps.permission",
    "bkuser.apps.notification",
    "bkuser.apps.tenant",
    "bkuser.apps.idp",
    "bkuser.apps.data_source",
]

# apos.sync 分层
[[tool.importlinter.contracts]]
name = "Apps sync Layers contract"
type = "layers"
layers = [
    "bkuser.apps.sync.periodic_tasks",
    "bkuser.apps.sync.managers",
    "bkuser.apps.sync.tasks",
    "bkuser.apps.sync.runners",
    "bkuser.apps.sync.syncers",
    "bkuser.apps.sync.models",
]

# biz 分层
[[tool.importlinter.contracts]]
name = "Biz Layers contract"
type = "layers"
layers = [
    "bkuser.biz.tenant",
    "bkuser.biz.data_source | bkuser.biz.organization | bkuser.biz.exporters",
    "bkuser.biz.validators",
]

# apis 独立模块
[[tool.importlinter.contracts]]
name = "Apis Independence contract"
type = "independence"
modules = [
    "bkuser.apis.login",
    "bkuser.apis.open_v2",
    "bkuser.apis.web",
]

# apis.web 独立模块
[[tool.importlinter.contracts]]
name = "Apis Web Independence contract"
type = "independence"
modules = [
    "bkuser.apis.web.basic",
    "bkuser.apis.web.data_source",
    "bkuser.apis.web.organization",
    "bkuser.apis.web.platform_management",
]
ignore_imports = [
    "bkuser.apis.web.*.views -> bkuser.apis.web.*.serializers",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
