[project]
name = "idp-plugins"
description = ""
version = "0.1.0"
readme = "README.md"
dynamic = ["classifiers"]
authors = [{ name = "TencentBlueKing", email = "contactus_bk@tencent.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "django==4.2.23",
    "pydantic==2.11.7",
    "blue-krill==2.1.2"
]

[dependency-groups]
dev = [
    "ruff>=0.7.4,<0.8.0",
    "mypy>=1.13.0,<2.0.0",
    "types-requests>=2.31.0.1,<3.0.0",
    "pytest>=8.3.3,<9.0.0",
    "pytest-django>=4.9.0,<5.0.0",
    "import-linter>=2.1,<3.0.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
# url = "https://mirrors.tencent.com/pypi/simple"
url = "https://pypi.org/simple/"
default = true

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
strict_optional = true
pretty = true
check_untyped_defs = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
]
ignore_errors = true

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "I", "C90", "PL", "RET", "N", "C4", "PT", "PERF", "G", "TRY", "SIM", "B", "PIE"]
# All Rule: https://beta.ruff.rs/docs/rules/
# Add `noqa: E501` manually when necessary until this issue is fixed: https://github.com/astral-sh/ruff/issues/3825
ignore = [
    # Consider moving this statement to an else block
    "TRY300",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM105",
    # Use ternary operator {contents} instead of if-else-block
    "SIM108",
    # Avoid too many arguments
    "PLR0913",
    # Avoid too many return statements
    "PLR0911",
    # raise-without-from-inside-except
    "B904"
]

[tool.ruff]
# Same as Black.
line-length = 119
# show an enumeration of all autofixed lint violations
# show-fixes = true
# show source code snippets when reporting lint violations
# show-source = true
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
]
force-exclude = true

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"

[tool.importlinter]
root_package = "bklogin"
